# aoi-anomaly-inspector

./: LICENSE  README.md  pyproject.toml
comparison_samples/: comparison_report.json  comparison_table.md  sample_visualizations.md
configs/: padim_mvtec.yaml  patchcore_mvtec.yaml
scripts/: aoi_runner.py  check_data.py  compare_models.py  consistency_check.py  evaluate.py  export.py  predict.py  train.py
src/aoi/: __init__.py  callbacks.py  config.py  data.py  device.py  infer_data.py  models.py  postprocess.py  report.py  run.py  thresholds.py  viz.py
